commit do fim do dia

--- a/index.html
+++ b/index.html
@@ -30,15 +30,20 @@
             <br />
           </div>
           <div class="btns">
-            <input type="submit" value="Verificar informações" id="enviar" />
-            <input type="reset" value="Limpar dados" />
+            <input
+              type="submit"
+              class="btn"
+              value="Descobrir seu Signo"
+              id="enviar"
+            />
+            <input type="reset" class="btn" value="Limpar dados" />
             <br />
           </div>
         </form>
         <div class="inserirSigno"></div>
 
-        <a href="https://www.personare.com.br/signos" target="_blank"
-          >Verificar seu Horóscopo do dia</a
+        <a href="https://www.personare.com.br/signos" target="_blank">
+          Clique aqui para ler seu Horóscopo do dia</a
         >
       </div>
     </main>
