commit do dia 03-10 pela manhã

--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
             <br />
           </div>
         </form>
-        <div class="inserirSigno"></div>
 
-        <a href="https://www.personare.com.br/signos" target="_blank">
-          Clique aqui para ler seu Horóscopo do dia</a
-        >
+        <div class="inserirSigno">
+          <p>
+            &#129146;
+            <a href="https://www.personare.com.br/signos" target="_blank">
+              Clique aqui para ler seu Horóscopo do dia</a
+            >
+            &#129152;
+          </p>
+        </div>
       </div>
     </main>
     <script src="js/script.js"></script>
