--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p>
             &#129146;
             <a href="https://www.personare.com.br/signos" target="_blank">
-              Clique aqui para ler seu Horóscopo do dia</a
+              Clique aqui para ler seu Horóscopo</a
             >
             &#129152;
           </p>
